Adds miami bundle

--- a/Resources/Prototypes/_Harmony/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/_Harmony/Catalog/Fills/Backpacks/duffelbag.yml
@@ -45,3 +45,41 @@
     - id: WeaponRifleBandit
     - id: MagazineLightRifleCaseless
       amount: 2
+
+- type: entity
+  parent: ClothingBackpackDuffel
+  id: SyndicateMiamiKitRichard
+  suffix: Harmony, Richard Kit
+  components:
+  - type: StorageFill
+    contents:
+    - id: ClothingHeadHatRichard
+      amount: 1
+    - id: MagazinePistolSubMachineGun
+      amount: 1
+    - id: WeaponSubMachineGunM10
+      amount: 1
+    - id: ClothingOuterCoatLetterman
+      amount: 1
+    - id: ClothingUniformJumpsuitOperativeShortSleeved
+      amount: 1
+    - id: ClothingShoesColorWhite
+      amount: 1
+
+- type: entity
+  parent: ClothingBackpackDuffel
+  id: SyndicateMiamiKitTony
+  suffix: Harmony, Tony Kit
+  components:
+  - type: StorageFill
+    contents:
+    - id: ClothingHeadHatTony
+      amount: 1
+    - id: ClothingHandsBloodyKnuckleDusters
+      amount: 1
+    - id: ClothingOuterVestFlak
+      amount: 1
+    - id: ClothingUniformJumpsuitOperativeShortSleeved
+      amount: 1
+    - id: ClothingShoesBootsCombat
+      amount: 1
