--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/clothesmate.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/clothesmate.yml
@@ -100,6 +100,7 @@
     # Harmony change
     # DO NOT ADD MORE, USE UNIFORM DYING
   contrabandInventory:
+    ClothingOuterCoatLetterman: 1 # Harmony change - Add letterman jacket to clothesmade inventory
     ClothingMaskNeckGaiter: 2
     ClothingUniformJumpsuitTacticool: 1
     ClothingUniformJumpskirtTacticool: 1
