--- a/Resources/Prototypes/_Harmony/Entities/Clothing/Uniforms/jumpsuits.yml
+++ b/Resources/Prototypes/_Harmony/Entities/Clothing/Uniforms/jumpsuits.yml
@@ -140,3 +140,15 @@
     sprite: _Harmony/Clothing/Uniforms/Jumpsuit/syndie_business.rsi
   - type: Clothing
     sprite: _Harmony/Clothing/Uniforms/Jumpsuit/syndie_business.rsi
+
+- type: entity
+  parent: [ClothingUniformJumpsuitOperative, BaseSyndicateContraband]
+  id: ClothingUniformJumpsuitOperativeShortSleeved
+  name: short-sleeved jumpsuit
+  suffix: Harmony
+  description: Uniform for mask-wearing operatives performing russian mobster murder in deep space.
+  components:
+  - type: Sprite
+    sprite: _Harmony/Clothing/Uniforms/Jumpsuit/operative.rsi
+  - type: Clothing
+    sprite: _Harmony/Clothing/Uniforms/Jumpsuit/operative.rsi
