--- a/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_Harmony/Catalog/uplink_catalog.yml
@@ -57,20 +57,24 @@
   - UplinkWeaponry
 
 - type: listing
-  id: UplinkMiamiBundle
-  name: uplink-miami-bundle-name
-  description: uplink-miami-bundle-desc
-  productEntity: CrateSyndicateMiamiBundle
-  icon: { sprite: _Harmony/Clothing/Head/Misc/tony.rsi, state: icon }
+  id: UplinkM10Bundle
+  name: uplink-smg-m10-name
+  description: uplink-smg-m10-desc
+  productEntity: ClothingBackpackDuffelSyndicateFilledM10
+  icon: { sprite: _Harmony/Objects/Weapons/Guns/SMGs/m10.rsi, state: icon }
   cost:
-    Telecrystal: 14 # no discounts, this bundle is random, surplus also is and doesn't get them
+    Telecrystal: 14
   categories:
   - UplinkWeaponry
   conditions:
   - !type:StoreWhitelistCondition
-    blacklist:
+    whitelist:
       tags:
       - NukeOpsUplink
+  - !type:BuyerWhitelistCondition
+    blacklist:
+      components:
+      - SurplusBundle
 
 # Explosives
 
@@ -300,6 +304,22 @@
     blacklist:
       tags:
         - NukeOpsUplink
+
+- type: listing
+  id: UplinkMiamiBundle
+  name: uplink-miami-bundle-name
+  description: uplink-miami-bundle-desc
+  productEntity: ClothingBackpackDuffelSyndicateMiamiBundle
+  icon: { sprite: _Harmony/Clothing/Head/Misc/tony.rsi, state: icon }
+  cost:
+    Telecrystal: 4
+  categories:
+  - UplinkWearables
+  conditions:
+  - !type:StoreWhitelistCondition
+    blacklist:
+      tags:
+      - NukeOpsUplink
 
 # Pointless
 
