--- a/Resources/Prototypes/_Harmony/SoundCollections/gun_sounds.yml
+++ b/Resources/Prototypes/_Harmony/SoundCollections/gun_sounds.yml
@@ -20,3 +20,10 @@
   files:
   - /Audio/_Harmony/Weapons/Guns/Gunshots/python_fire1.ogg
   - /Audio/_Harmony/Weapons/Guns/Gunshots/python_fire2.ogg
+
+# Used in _Harmony/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
+- type: soundCollection
+  id: TaipanFire
+  files:
+  - /Audio/_Harmony/Weapons/Guns/Gunshots/taipan_fire1.ogg
+  - /Audio/_Harmony/Weapons/Guns/Gunshots/taipan_fire2.ogg
