--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -529,6 +529,10 @@
         volume: -6
     Salute:
       collection: Salutes
+# Harmony start - impstation blink
+    Blink:
+      collection: Blinks
+# Harmony end
 
 - type: emoteSounds
   id: DionaBodyEmotes
@@ -546,6 +550,10 @@
       path: /Audio/Voice/Diona/diona_salute.ogg
       params:
        volume: -5
+# Harmony start - impstation blink
+    Blink:
+      collection: Blinks
+# Harmony end
 
 - type: emoteSounds
   id: ReptilianBodyEmotes
@@ -564,6 +572,10 @@
         volume: -6
     Salute:
       collection: Salutes
+# Harmony start - impstation blink
+    Blink:
+      collection: Blinks
+# Harmony end
 
 # mobs
 - type: emoteSounds
