who knew spriting a BLINK is hard

--- a/Resources/Prototypes/_Impstation/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/_Impstation/Voice/speech_emotes.yml
@@ -2,7 +2,7 @@
   id: Blink
   name: chat-emote-name-blink
   category: General
-  icon: _Impstation/Interface/Emotes/blink.png
+  icon: _Harmony/Interface/Emotes/blink.png # Harmony - changed path
   chatMessages: ["chat-emote-msg-blink"]
   chatTriggers:
   - blink
