--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -32,6 +32,8 @@
     KillRandomPersonObjective: 1
     KillRandomHeadObjective: 0.25
     TeachLessonRandomPersonObjective: 1 #Harmony objective
+    KillRandomTraitorObjective: 0.1 #Harmony objective
+    TeachLessonRandomTraitorObjective: 0.1 #Harmony objective
 
 - type: weightedRandom
   id: TraitorObjectiveGroupState
