--- a/Resources/Prototypes/Roles/Jobs/Security/warden.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/warden.yml
@@ -41,7 +41,7 @@
     back:
     - Flash
     - MagazinePistol
-    - WeaponPistolMk58
+#   - WeaponPistolMk58 # Harmony - moved to loadouts
 
 - type: chameleonOutfit
   id: WardenChameleonOutfit
