--- a/Resources/Prototypes/_Harmony/Loadouts/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/_Harmony/Loadouts/Jobs/Security/detective.yml
@@ -30,4 +30,23 @@
   id: DetectiveDiscoCoatHarmony
   equipment:
     outerClothing: ClothingOuterCoatDetectiveLoadoutDiscoHarmony
-    
+
+# Firearms
+- type: loadout
+  id: SecurityRevolverInspector
+  storage:
+    belt:
+    - WeaponRevolverInspector
+
+- type: loadout
+  id: SecurityRevolverJudge
+  storage:
+    belt:
+    - WeaponRevolverJudge
+
+# Ammo
+- type: loadout
+  id: SecurityFirearmSpeedLoaderMagnum
+  storage:
+    back:
+    - SpeedLoaderMagnum
