--- a/Resources/Prototypes/Roles/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/detective.yml
@@ -29,7 +29,10 @@
     eyes: ClothingEyesGlassesSecurity
     id: DetectivePDA
     ears: ClothingHeadsetSecurity
-    belt: ClothingBeltHolsterFilled
+    # Start harmony change - moved to loadouts
+#   belt: ClothingBeltHolsterFilled
+    belt: ClothingBeltHolster
+    # End harmony change
   storage:
     back:
     - Flash
