--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -55,7 +55,7 @@
     back:
     - Flash
     - MagazinePistol
-    - WeaponPistolMk58
+#   - WeaponPistolMk58 # Harmony - moved to loadouts
 
 - type: chameleonOutfit
   id: HeadOfSecurityChameleonOutfit
