--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -32,7 +32,7 @@
     back:
     - Flash
     - MagazinePistol
-    - WeaponPistolMk58
+#   - WeaponPistolMk58 # harmony - moved to loadouts
 
 - type: chameleonOutfit
   id: SecurityOfficerChameleonOutfit
