--- a/Resources/Prototypes/_Harmony/Loadouts/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/_Harmony/Loadouts/Jobs/Security/detective.yml
@@ -1,3 +1,13 @@
+# Special items for detective mains
+- type: loadoutEffectGroup
+  id: MasterDetective
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobDetective
+      time: 20h # 10 ish shifts (det is hard to master this should be hard to get!!)
+
 # Head
 - type: loadout
   id: DetectiveFedoraBlueHarmony
@@ -40,6 +50,9 @@
 
 - type: loadout
   id: SecurityRevolverJudge
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: MasterDetective
   storage:
     belt:
     - WeaponRevolverJudge
