--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/LMGs/lmgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/LMGs/lmgs.yml
@@ -43,8 +43,12 @@
       gun_magazine:
         name: Magazine
         startingItem: MagazineLightRifleBox
-        insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
-        ejectSound: /Audio/Weapons/Guns/MagOut/batrifle_magout.ogg
+        # Start harmony change - Handling sounds
+#       insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
+#       ejectSound: /Audio/Weapons/Guns/MagOut/batrifle_magout.ogg
+        insertSound: /Audio/_Harmony/Weapons/Guns/MagIn/lmg_magin.ogg
+        ejectSound: /Audio/_Harmony/Weapons/Guns/MagOut/lmg_magout.ogg
+        # End harmony change
         priority: 2
         whitelist:
           tags:
